Teste pra mobile

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="patone-icone-32x32.png" type="image/png" sizes="64x64">
-    <title>Meu Portfólio</title>
+    <link rel="icon" href="G.png" type="image/png" sizes="16x16">
+    <title>Guilherme Novaes Campos</title>
 </head>
 <body>
     <header>
-        <h1>Meu Portfólio</h1>
+        <div class="logo">
+            <img src="G.png" style="max-width: 100px">
+            <div class="titulo">
+                <h1>Guilherme Novaes</h1>
+                <h1 style="text-align: center;">Campos</h1>
+            </div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#sobre">Sobre</a></li>
@@ -30,38 +36,46 @@
 
     <section id="projetos">
         <h2 style="margin-left: 15px; margin-bottom: 25px;">Projetos</h2>
-        <section class="projeto" style="margin-left: 15px; margin-right: 15px">
-            <div style="margin-bottom: 50px;">
+        <section class="projetos">
+            <div class="projeto">
                 <h3>1# Site da igreja MVN Parque Real</h3>
-                <img src="screenshot-igreja.png" alt="Imagem do Site Igreja Parque Real" style="max-width: 500px;">
+                <div class="galeria">
+                    <a class="anterior" onclick="changeImage(-1)">&#10094;</a>
+                    <img id="imagemGaleria" src="site-da-igreja1.JPG" alt="Imagem do Site Igreja Parque Real">
+                    <a class="proximo" onclick="changeImage(1)">&#10095;</a>
+                </div>
                 <p>Um site para a igreja MVN do Parque Real, contém diversas informações e opções para explorar</p>
-                <a href="https://mvnparquereal.000webhostapp.com/" target="_blank">Visitar site</a>
-                <a style="margin-left: 10px"href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" href="https://mvnparquereal.000webhostapp.com/" target="_blank">Visitar site</a>
+                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
             </div>
-            <div style="margin-bottom: 50px">
+            <div class="projeto">
                 <h3>2# Criptografia</h3>
                 <img src="#" alt="Imagem da Criptografia" style="max-width: 500px">
                 <p>Um programa para cifrar e decifrar mensagens a partir do metódo Cifra de Fluxo</p>
-                <a href="#" target="_blank">Baixar programa</a>
-                <a style="margin-left: 10px"href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" href="#">Baixar programa</a>
+                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
             </div>
-            <div>
+            <div class="projeto">
                 <h3>3# TubeTunes</h3>
                 <img src="#" alt="Imagem do TubeTunes" style="max-width: 500px">
                 <p>Um programa que permite a reprodução de músicas e downloads a partir de videos do YouTube</p>
-                <a href="#" target="_blank">Baixar programa</a>
-                <a style="margin-left: 10px"href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" href="#">Baixar programa</a>
+                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
             </div>
         </section>
+
+        <p style="text-align: center;"><a class="link" href="#">Ver mais projetos</a></p>
+
     </section>
 
-    <footer id="pé">
+    <footer id="pe">
         <section>
             <p>&copy; 2023 Guilherme Novaes Campos</p>
-            <section>
-                <p style="margin-top: 15px"><strong>Email:</strong> novaesgui2323@outlook.com</p>
-                <p style="margin-top:-10px"><strong>Telefone:</strong> (62) 99____-____</p>
-                <p style="margin-bottom: 15px; margin-top: -10px;"><strong>LinkedIn: </strong><a href="#">Guilherme Novaes Campos</a></p>
+            <section id="informacoes">
+                <a><strong>Email:</strong> novaesgui2323@outlook.com</a>
+                <a><strong>Telefone:</strong> (62) 9522-7567</a>
+                <strong>LinkedIn: </strong><a class="link" style="display: inline;" 
+                href="https://www.linkedin.com/in/guilherme-novaes-4a7a16292/" target="_blank">Guilherme Novaes Campos</a>
             </section>
         </section>
     </footer>
@@ -69,3 +83,21 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<script>
+    var indexImagemAtual = 0;
+    var imagens = ["site-da-igreja1.JPG", "site-da-igreja2.JPG"];
+    var imagemGaleria = document.getElementById("imagemGaleria");
+
+    function changeImage(step) {
+        indexImagemAtual += step;
+
+        if (indexImagemAtual < 0) {
+            indexImagemAtual = imagens.length - 1;
+        } else if (indexImagemAtual >= imagens.length) {
+            indexImagemAtual = 0;
+        }
+
+        imagemGaleria.src = imagens[indexImagemAtual];
+    }
+</script>
