--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="G.png" style="max-width: 100px">
+            <img src="G.png" style="max-width: 15%">
             <div class="titulo">
                 <h1>Guilherme Novaes</h1>
                 <h1 style="text-align: center;">Campos</h1>
@@ -25,17 +25,17 @@
         </nav>
     </header>
 
-    <section id="sobre">
-        <h2 style="margin-left: 15px; margin-top: 20px">Sobre Mim</h2>
-        <p style="margin-left: 15px; margin-right: 15px; margin-top: -5px">
-           Sou apenas um estudante de Ciência da Computação e busco aprimorar os meus conhecimentos através 
-           de programação. Desde sempre gosto de programar e por isso tornei isso na minha profissão. 
-           Moro em Aparecida de Goiânia, GO.
+    <section id="sobre" style="padding: 1% 1%;">
+        <h2 style="margin-left: 0.2%; margin-top: 2%;">Sobre Mim</h2>
+        <p style="margin-left: 0.2%; margin-right: 2%; margin-top: -1%;">
+            Sou apenas um estudante de Ciência da Computação e busco aprimorar os meus conhecimentos através 
+            de programação. Desde sempre gosto de programar e por isso tornei isso na minha profissão. 
+            Moro em Aparecida de Goiânia, GO.
         </p>
     </section>
 
     <section id="projetos">
-        <h2 style="margin-left: 15px; margin-bottom: 25px;">Projetos</h2>
+        <h2 style="margin-left: 1.2%; margin-bottom: 3%;">Projetos</h2>
         <section class="projetos">
             <div class="projeto">
                 <h3>1# Site da igreja MVN Parque Real</h3>
@@ -46,21 +46,21 @@
                 </div>
                 <p>Um site para a igreja MVN do Parque Real, contém diversas informações e opções para explorar</p>
                 <a class="link" href="https://mvnparquereal.000webhostapp.com/" target="_blank">Visitar site</a>
-                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
             </div>
             <div class="projeto">
                 <h3>2# Criptografia</h3>
-                <img src="#" alt="Imagem da Criptografia" style="max-width: 500px">
+                <img src="#" alt="Imagem da Criptografia" style="max-width: 50%">
                 <p>Um programa para cifrar e decifrar mensagens a partir do metódo Cifra de Fluxo</p>
                 <a class="link" href="#">Baixar programa</a>
-                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
             </div>
             <div class="projeto">
                 <h3>3# TubeTunes</h3>
-                <img src="#" alt="Imagem do TubeTunes" style="max-width: 500px">
+                <img src="#" alt="Imagem do TubeTunes" style="max-width: 50%">
                 <p>Um programa que permite a reprodução de músicas e downloads a partir de videos do YouTube</p>
                 <a class="link" href="#">Baixar programa</a>
-                <a class="link" style="margin-left: 10px;" href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
+                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
             </div>
         </section>
 
