--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="G.png" style="max-width: 15%; width: auto; height: auto;">
+            <img src="G.png" style="max-width: 15%; width: 100%; height: 100%;">
             <div class="titulo">
                 <h1>Guilherme Novaes</h1>
                 <h1 style="text-align: center;">Campos</h1>
