Toques finais pra versão mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="G.png" style="max-width: 15%; width: 100%; height: 100%;">
+            <img src="G.png" class="imagemLogo">
             <div class="titulo">
                 <h1>Guilherme Novaes</h1>
                 <h1 style="text-align: center;">Campos</h1>
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#pé">Contato</a></li>
+                <li><a href="#rodapé">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,7 @@
     </section>
 
     <section id="projetos">
-        <h2 style="margin-left: 1.2%; margin-bottom: 3%;">Projetos</h2>
+        <h2 style="margin-left: 1.2%;">Projetos</h2>
         <section class="projetos">
             <div class="projeto">
                 <h3>1# Site da igreja MVN Parque Real</h3>
@@ -68,7 +68,7 @@
 
     </section>
 
-    <footer id="pe">
+    <footer id="rodapé">
         <section>
             <p>&copy; 2023 Guilherme Novaes Campos</p>
             <section id="informacoes">
