--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ptBR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,6 @@
 <body>
     <header>
         <div class="logo">
-            <img src="G.png" class="imagemLogo">
             <div class="titulo">
                 <h1>Guilherme Novaes</h1>
                 <h1 style="text-align: center;">Campos</h1>
@@ -35,7 +34,7 @@
     </section>
 
     <section id="projetos">
-        <h2 style="margin-left: 1.2%;">Projetos</h2>
+        <h2 style="margin-left: 1.2%;">Alguns dos meus Projetos</h2>
         <section class="projetos">
             <div class="projeto">
                 <h3>1# Site da igreja MVN Parque Real</h3>
@@ -44,27 +43,27 @@
                     <img id="imagemGaleria" src="site-da-igreja1.JPG" alt="Imagem do Site Igreja Parque Real">
                     <a class="proximo" onclick="changeImage(1)">&#10095;</a>
                 </div>
-                <p>Um site para a igreja MVN do Parque Real, contém diversas informações e opções para explorar</p>
+                <p>Um site para a igreja MVN do Parque Real, contém informações sobre a igreja, localização e contato.</p>
                 <a class="link" href="https://mvnparquereal.000webhostapp.com/" target="_blank">Visitar site</a>
                 <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
             </div>
             <div class="projeto">
                 <h3>2# Criptografia</h3>
-                <img src="#" alt="Imagem da Criptografia" style="max-width: 50%">
-                <p>Um programa para cifrar e decifrar mensagens a partir do metódo Cifra de Fluxo</p>
+                <img class="imagem" src="criptografia.JPG" alt="Imagem da Criptografia" style="max-width: 50%">
+                <p>Um programa para cifrar e decifrar mensagens a partir do metódo Cifra de Fluxo. Também foi reestruturado para servir como um pacote do Python.</p>
                 <a class="link" href="#">Baixar programa</a>
                 <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
             </div>
             <div class="projeto">
                 <h3>3# TubeTunes</h3>
-                <img src="#" alt="Imagem do TubeTunes" style="max-width: 50%">
-                <p>Um programa que permite a reprodução de músicas e downloads a partir de videos do YouTube</p>
+                <img class="imagem" src="tubetunes.JPG" alt="Imagem do TubeTunes" style="max-width: 50%">
+                <p>Um programa que permite a reprodução de músicas e downloads a partir de videos do YouTube com todas as suas meta informações.</p>
                 <a class="link" href="#">Baixar programa</a>
                 <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
             </div>
         </section>
 
-        <p style="text-align: center;"><a class="link" href="#">Ver mais projetos</a></p>
+        <p style="text-align: center;"><a class="link" href="https://github.com/PatoPon">Ver mais projetos</a></p>
 
     </section>
 
@@ -74,8 +73,6 @@
             <section id="informacoes">
                 <a><strong>Email:</strong> novaesgui2323@outlook.com</a>
                 <a><strong>Telefone:</strong> (62) 9522-7567</a>
-                <strong>LinkedIn: </strong><a class="link" style="display: inline;" 
-                href="https://www.linkedin.com/in/guilherme-novaes-4a7a16292/" target="_blank">Guilherme Novaes Campos</a>
             </section>
         </section>
     </footer>
