--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>&copy; 2023 Guilherme Novaes Campos</p>
             <section id="informacoes">
                 <a><strong>Email:</strong> novaesgui2323@outlook.com</a>
-                <a><strong>Telefone:</strong> (62) 9522-7567</a>
+                <a><strong>Telefone:</strong> +55 62 99390-2778</a>
             </section>
         </section>
     </footer>
