--- a/index.html
+++ b/index.html
@@ -1,100 +1,54 @@
 <!DOCTYPE html>
-<html lang="ptBR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emily Novaes</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="G.png" type="image/png" sizes="16x16">
-    <title>Guilherme Novaes Campos</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <div class="titulo">
-                <h1>Guilherme Novaes</h1>
-                <h1 style="text-align: center;">Campos</h1>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#rodapé">Contato</a></li>
-            </ul>
-        </nav>
+    <header class="texto-animado">
+        <h1>BEM-VINDO À MATRIX</h1>
     </header>
 
-    <section id="sobre" style="padding: 1% 1%;">
-        <h2 style="margin-left: 0.2%; margin-top: 2%;">Sobre Mim</h2>
-        <p style="margin-left: 0.2%; margin-right: 2%; margin-top: -1%;">
-            Sou apenas um estudante de Ciência da Computação e busco aprimorar os meus conhecimentos através 
-            de programação. Desde sempre gosto de programar e por isso tornei isso na minha profissão. 
-            Moro em Aparecida de Goiânia, GO.
-        </p>
-    </section>
+    <div class="container animacao-aparecer" id="destaque">
+        <img src="pessoa.png" alt="Descrição da Imagem">
 
-    <section id="projetos">
-        <h2 style="margin-left: 1.2%;">Alguns dos meus Projetos</h2>
-        <section class="projetos">
-            <div class="projeto">
-                <h3>1# Site da igreja MVN Parque Real</h3>
-                <div class="galeria">
-                    <a class="anterior" onclick="changeImage(-1)">&#10094;</a>
-                    <img id="imagemGaleria" src="site-da-igreja1.JPG" alt="Imagem do Site Igreja Parque Real">
-                    <a class="proximo" onclick="changeImage(1)">&#10095;</a>
-                </div>
-                <p>Um site para a igreja MVN do Parque Real, contém informações sobre a igreja, localização e contato.</p>
-                <a class="link" href="https://mvnparquereal.000webhostapp.com/" target="_blank">Visitar site</a>
-                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/mvnparquereal.github.io" target="_blank">Ver repositório no GitHub</a>
-            </div>
-            <div class="projeto">
-                <h3>2# Criptografia</h3>
-                <img class="imagem" src="criptografia.JPG" alt="Imagem da Criptografia" style="max-width: 50%">
-                <p>Um programa para cifrar e decifrar mensagens a partir do metódo Cifra de Fluxo. Também foi reestruturado para servir como um pacote do Python.</p>
-                <a class="link" href="#">Baixar programa</a>
-                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/Criptografia" target="_blank">Ver repositório no GitHub</a>
-            </div>
-            <div class="projeto">
-                <h3>3# TubeTunes</h3>
-                <img class="imagem" src="tubetunes.JPG" alt="Imagem do TubeTunes" style="max-width: 50%">
-                <p>Um programa que permite a reprodução de músicas e downloads a partir de videos do YouTube com todas as suas meta informações.</p>
-                <a class="link" href="#">Baixar programa</a>
-                <a class="link" style="margin-left: 1%;" href="https://github.com/PatoPon/MP3-Player-e-Youtube-Downloader" target="_blank">Ver repositório no GitHub</a>
-            </div>
-        </section>
-
-        <p style="text-align: center;"><a class="link" href="https://github.com/PatoPon">Ver mais projetos</a></p>
-
-    </section>
-
-    <footer id="rodapé">
         <section>
-            <p>&copy; 2023 Guilherme Novaes Campos</p>
-            <section id="informacoes">
-                <a><strong>Email:</strong> novaesgui2323@outlook.com</a>
-                <a><strong>Telefone:</strong> +55 62 99390-2778</a>
-            </section>
-        </section>
-    </footer>
+            <h2>
+                APRENDA A MULTIPLICAR SEU<br>
+                <span id="dourado" style="font-size: 40px; font-family: 'Courier New', Courier, monospace;">
+                    FATURAMENTO
+                </span><br>
+                COM TÉCNICAS EXCLUSIVAS DE LIDERANÇA E VENDA
+            </h2>
+            <p style="font-size: 18px; font-family: 'Courier New', Courier, monospace;">
+                O treinamento <span id="cor-matrix">VENDAS MATRIX: DECODIFICANDO O SUCESSO</span> 
+                foi criado para ajudar seu negócio e multiplicar 
+                seus resultados ainda em 2024, através de 
+                estratégias exclusivas que vão transformar a sua realidade!
+            </p>
+        </section>    
+    </div>
+
+    <div class="caracteristicas">
+        <h2 style="margin-left: 21px;">Nesse curso você vai aprender:</h2>
+
+        <div class="grid-container animacao-aparecer">
+            <div>Entender e utilizar multicanais digitais de vendas;</div>
+            <div>Posicionar de forma estratégica a sua marca e o seu negócio;</div>
+            <div>Entender os perfis de clientes e colaboradores do seu negócio e aprender as melhores estratégias de comunicação;</div>
+            <div>Profissionalizar o WhatsApp Business da sua empresa;</div>
+            <div>Liderar sua vida e melhorar seus negócios;</div>
+            <div>Ferramentas de inteligência artificial e estratégias de redes sociais;</div>
+            <div>Como gerir suas finanças;</div>
+            <div>A importância do networking e das portas que ele abre.</div>
+        </div>
+    </div>
+    
+    <canvas id="Matrix" style="width: 100%"></canvas>
 
     <script src="script.js"></script>
 </body>
 </html>
-
-<script>
-    var indexImagemAtual = 0;
-    var imagens = ["site-da-igreja1.JPG", "site-da-igreja2.JPG"];
-    var imagemGaleria = document.getElementById("imagemGaleria");
-
-    function changeImage(step) {
-        indexImagemAtual += step;
-
-        if (indexImagemAtual < 0) {
-            indexImagemAtual = imagens.length - 1;
-        } else if (indexImagemAtual >= imagens.length) {
-            indexImagemAtual = 0;
-        }
-
-        imagemGaleria.src = imagens[indexImagemAtual];
-    }
-</script>
