--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Novaes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="patopon.github.io/styles.css">
 </head>
 <body>
     <header class="texto-animado">
@@ -47,7 +47,7 @@
         </div>
     </div>
     
-    <canvas id="Matrix" style="width: 100%"></canvas>
+    <canvas id="Matrix" style="width: 100%; z-index: -1"></canvas>
 
     <script src="script.js"></script>
 </body>
