--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span id="dourado" style="font-size: min(10vw, 30px); font-family: 'Courier New', Courier, monospace;">
                     FATURAMENTO
                 </span><br>
-                COM TÉCNICAS EXCLUSIVAS DE LIDERANÇA E VENDA
+                COM TÉCNICAS EXCLUSIVAS DE LIDERANÇA E VENDAS
             </h2>
             <p style="font-size: min(3.5vw, 15px); font-family: 'Courier New', Courier, monospace;">
                 O treinamento <span id="cor-matrix">VENDAS MATRIX: DECODIFICANDO O SUCESSO</span> 
