--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <div class="container animacao-aparecer" id="destaque">
-        <section>
-            <h2 style="font-size: min(5vw, 20px)">
+        <section style="width: 80vw;">
+            <h2 style="font-size: min(4vw, 18px)">
                 APRENDA A MULTIPLICAR SEU<br>
                 <span id="dourado" style="font-size: min(10vw, 30px); font-family: 'Courier New', Courier, monospace;">
                     FATURAMENTO
@@ -33,6 +33,17 @@
         </section>    
     </div>
 
+    <a href="https://wa.me/message/ZRUXGGPTMFDUH1">
+        <button class="btn">
+            <img src="iconzap.png" style="float:left;margin-right:0.4em" width="30" height="30">
+            <span>GARANTIR MINHA VAGA</span>
+        </button>
+    </a>
+
+    <div class="caracteristicas-titulo">
+        Veja o que você pode esperar aprender e dominar com este curso:
+    </div>
+
     <div class="grid-container">
         <p>Entender e utilizar multicanais digitais de vendas;</p>
         <p>Posicionar de forma estratégica a sua marca e o seu negócio;</p>
@@ -43,6 +54,24 @@
         <p>Como gerir suas finanças;</p>
         <p>A importância do networking e das portas que ele abre.</p>
     </div>
+
+    <section style="width: 90vw">
+        <div class="caracteristicas-titulo" id="dourado">CONHEÇA SUA MENTORA...</div>
+        <p class="texto-dayana">
+            DAYANA AMARAL é administradora e especialista em 
+            Desenvolvimento Humano e Empresarial. Criadora do método X-Primer, 
+            já treinou mais de <span id="cor-matrix">27.000 pessoas</span> gerando resultados! Empresária, palestrante e 
+            apaixonada por expandir o potencial das pessoas e empresas, tem o propósito de transformar 
+            conhecimento em realizações pessoais e profissionais.
+        </p>
+    </section>
+
+    <a href="https://wa.me/message/ZRUXGGPTMFDUH1">
+        <button class="btn">
+            <img src="iconzap.png" style="float:left;margin-right:0.4em" width="30" height="30">
+            <span>QUERO MULTIPLICAR MEU FATURAMENTO</span>
+        </button>
+    </a>
     
     <canvas id="Matrix" style="width: 100%; z-index: -1"></canvas>
 
