--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>    
     </div>
 
-    <a href="https://wa.me/message/ZRUXGGPTMFDUH1">
+    <a href="https://wa.me/message/ZRUXGGPTMFDUH1" style="text-decoration: none;">
         <button class="btn">
             <img src="iconzap.png" style="float:left;margin-right:0.4em" width="30" height="30">
             <span>GARANTIR MINHA VAGA</span>
@@ -66,7 +66,7 @@
         </p>
     </section>
 
-    <a href="https://wa.me/message/ZRUXGGPTMFDUH1">
+    <a href="https://wa.me/message/ZRUXGGPTMFDUH1" style="text-decoration: none;">
         <button class="btn">
             <img src="iconzap.png" style="float:left;margin-right:0.4em" width="30" height="30">
             <span>QUERO MULTIPLICAR MEU FATURAMENTO</span>
